# feishu-mcp-server

./: .env.example  .gitignore  Agents.md  README.md  main.py  pyproject.toml
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/feishu/: __init__.py  auth.py  client.py  document.py
src/feishu_mcp/: __init__.py  main.py
src/feishu_mcp/config/: settings.py
src/feishu_mcp/feishu/: __init__.py  auth.py  bitable.py  client.py  document.py  errors.py
src/feishu_mcp/models/: __init__.py  schemas.py
src/feishu_mcp/tools/: __init__.py  tools.py
src/mcp/: __init__.py  tools.py
src/models/: __init__.py  schemas.py
src/utils/: logger.py
tests/: test_auth.py  test_bitable.py  test_config.py  test_document.py  test_main.py  test_mcp.py
